<resources>
    <string name="app_name">MiTesina</string>

    <string name="txt_iniciar_con_facebook">Iniciar con Facebook</string>
    <string name="txt_iniciar_sesion">Iniciar Sesión</string>
    <string name="txt_olvide_contraseña">Olvidé mi contraseña</string>
    <string name="txt_no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="txt_registrate">Regístrate</string>
    <string name="txt_nombre_usuario_correo">Nombre de Usuario o email</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="tab_text_1">Actividad</string>
    <string name="tab_text_2">Mapa</string>
    <string name="tab_text_3">Denuncias</string>
    <string name="facebook_app_id">2484338418464418</string>
    <string name="fb_login_protocol_scheme">fb2484338418464418</string>
    <string name="fb_cerrar_sesion">Cerrar Sesión</string>
    <string name="inicio_acercaDe">Acerca de</string>
</resources>
